[package]
name = "aster-block"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
spin = "0.9.4"
ostd = { workspace = true }
#align_ext = { git = "https://github.com/asterinas/asterinas", rev = "v0.6.2", subdir = "ostd/libs/align_ext" }
align_ext = "0.1"
aster-util = { path = "../../libs/aster-util" }
int-to-c-enum = { path = "../../libs/int-to-c-enum" }
component = { path = "../../libs/comp-sys/component" }
log = "0.4"
static_assertions = "1.1.0"

[features]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
